Step4 (#2267)
* refactor: 코드 리뷰 반영 (3단계)

- 조건문 수정
- 사다리를 한명씩 타도록 수정

* docs: 사다리 리펙터링 - 요구사항 분석 (4단계)

* refactor: 사다리 리펙터링 (4단계)

* refactor: 코드 리뷰 반영 (4단계)